--- a/doc/IIA Brief Outline.Rmd
+++ b/doc/IIA Brief Outline.Rmd
@@ -33,28 +33,29 @@ The \textit{service level} refers to the probability of the period-specific dema
 
 $\alpha = Prob\left(\mbox{period demand} \le \mbox{available inventory stock}\right)$.
 
-A distributor sets safety stock levels at any given fulfillment center so that the center's service level low with the intent to minimize the loss in sales due to the inability to fulfill orders, increasing customer retention. However, too much safety stock leads to unnecessary costs, which makes finding the appropriate balance between too much and too little essential for efficient distribution. 
+Setting safety stock levels appropriately is critical to minimizing costs. Typically, the amount of safety stock is chosen so that the probability of not meeting customer demand is low, based on the predicted sales. Loss is incurred due to incorrect forecasts by when
 
-Once an adequate demand prediction is and the uncertainty with this forecast is quantified, retailers determine the product buy - the amount of product to purchase for order fulfillment, and which e-commerce fulfillment center fulfills each online order using a set of rules which specify the logic necessary for minimizing the cost of shipping orders from fulfillment centers to delivery locations and the amount of time required for products to be delivered to the customer. 
+\begin{itemize}
+\item demand is overestimated, leading to excess inventory which will be wasted or discounted, or when
+\item demand is underestimated, resulting in missed sales opportunities and unsatisfactory customer experience.
+\end{itemize}
+
+
+Once they specify the service level and forecast sales, retailers determine the safety stock levels and the corresponding product _buy_ $b$ - the total amount of product to purchase for order fulfillment. Determining how this inventory is distributed is then a deterministic task - there is little to no uncertainty associated with which fulfillment center is most optimal for shipping a given order. The center that will fulfill each online order is determined using a set of rules which specify the logic necessary for minimizing 
+
+\begin{itemize}
+\item the cost of shipping orders from fulfillment centers to delivery locations and
+\item the amount of time required for products to be delivered to the customer. 
+\end{itemize}
 
 \subsubsection{Typical Solutions: Why they suck} 
 
-Despite the numerous existing applications offering solutions to the allocation problem, distribution inefficiencies are still quite prevelant. The underperformance of many tools can be attributed to one of more key shortcomings, the first of which is that they rely on rigid assumptions about the distribution of future product demand for a given fulfillment center. For example, many universally accepted methods assume that safety stock is proportional to the standard deviation of the demand, which is assumed to follow a Normal distribution. 
 
-{\color{red} HERE IS WHERE WE WILL PUT A PRETTY EXAMPLE PICTURE OF WHY ASSUMING NORMALITY IS BAD. HERE IS WHERE I NEED JOSH'S HELP EXPLAINING WHY THIS ASSUMPTION IS BAD -- MAKE SOME SORT OF REFERENCE TO A HIGHLY RIGHT-SKEWED DISTRIBUTION}
+Despite the numerous existing applications offering solutions to the allocation problem, inventory allocation inefficiencies are still quite prevelant across retail supply chains. The underperformance of many existing tools is due to potentially a number of issues. The methodologies that many of these tools employ rely on rigid assumptions about the distribution of future product demand for a given fulfillment center. For example, many universally accepted methods assume that safety stock is proportional to the standard deviation of the demand, which is assumed to follow a Normal distribution. It is also common in the existing market for software solutions to assume that the demand at a given fulfillment center is independent from week to week, i.e. that the demand in the current week contains useful information for predicting demand for the week to follow. In most practical situations, this assumption is invalid due to the innate dependency between time and demand. The classic example is the trendsetter: she purchases an item and after wearing it, the crowd follows suit and demand for a given product increases until it reaches a certain point at which the market is saturated. 
 
-It is also common in the existing market for software solutions to assume that the demand at a given fulfillment center is independent from week to week, i.e. that the demand in the current week contains useful information for predicting demand for the week to follow. In most practical situations, this assumption is invalid due to the innate dependency between time and demand. The classic example is the trendsetter: she purchases an item and after wearing it, the crowd follows suit and demand for a given product increases until it reaches a certain point at which the market is saturated.
-
-{\color{red} OR MAYBE WE PUT THE GRAPHIC HERE. I DON'T KNOW - I REVERT TO THE STORY WIZARDS.}
-
-Whenever these assumptions about the variability in demand are invalid, the calculations that many existing products use to determine the buy quantity for a given service level will be incorrect. This leads to loss due to either
-
-\begin{itemize}
-\item access inventory after overbuying, which will either be wasted or discounted
-\item sales loss as a result of not being able to meet consumer demand.
-\end{itemize}
-
-Some packages offer more sophisticated methods of forecasting demand than others, and in some cases, much more sophisticated.  Once a retailer obtains an adequate forecast for the demand, it is a straightforward task to determine the \textit{optimal initial allocation}, or the amount of inventory each fulfillment center should receive, based on their geographic locations and the demand predicted for the region that is serviced by a particular center. However, despite the quality of a predictive model, there is error associated with any prediction. Most existing inventory allocation tools determine the best initial allocation of inventory to fulfillment centers by assuming that this prediction error doesn't exist, but the uncertainty in demand prediction is inherited in the allocation that is best for a given demand prediction. Failure to account for the uncertainty in this allocation will lead to suboptimal allocation of inventory, leading to loss incurred due to fulfillment centers with overstock or inability to fulfill customer orders where the demanded exceed projections.
+Invalid assumptions about the variability in demand inhibit the ability to adequately quantify the uncertainty with predicted demand, which is integral to specifying the initial product buy and allocation to each fulfillment center. However, even when all forecasting assumptions are met, there is uncertainty associated with predictions
+Once a retailer obtains an adequate forecast for the demand, it is a straightforward task to determine the \textit{optimal initial allocation}, or the amount of inventory each fulfillment center should receive, based on their geographic locations and the demand predicted for the region that is serviced by a particular center. However, despite the quality of a predictive model, there is error associated with any prediction.
+Most existing inventory allocation tools determine the best initial allocation of inventory to fulfillment centers by assuming that this prediction error doesn't exist, but the uncertainty in demand prediction is inherited in the allocation that is best for a given demand prediction. Failure to account for the uncertainty in this allocation will lead to suboptimal allocation of inventory, leading to loss incurred due to fulfillment centers with overstock or inability to fulfill customer orders where the demanded exceed projections.
 
 {\color{red} PICTURE HERE TO EXPLAIN WHY THIS IS BAD AND HOW DISASTER COULD BE MITIGATED BY AVERAGING OVER THE SET OF ALL POSSIBLE ALLOCATIONS.}
 
